# OlaPay-Wallet

./: README.md  main.py  manage.py  pyproject.toml
OlaPay/: asgi.py  settings.py  urls.py  wsgi.py
notification/: models.py  services.py
notification/migrations/: 0001_initial.py  0002_initial.py  0003_alter_notification_message_and_more.py  0004_notification_edited_at.py  0005_remove_notification_edited_at.py  0006_remove_notification_user_notification_is_read_and_more.py
services/: onboarding_service.py
user/: admin.py  models.py  serializer.py  services.py  tests.py  url.py  views.py
user/migrations/: 0001_initial.py
wallet/: admin.py  models.py  serializer.py  services.py  urls.py  util.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_transaction_status.py  0002_alter_wallet_balance.py  0003_rename_balance_after_ledger_balance_and_more.py  0004_alter_wallet_user.py  0005_alter_transaction_reference.py
wallet/services/: create_wallet_service.py  dashboard_service.py  deposit.py  fund_wallet.py  intra_transfer_service.py
